Update Dockerfile and profiles.yml for dbt configuration; adjust requirements.txt formatting

--- a/dbt/jaffle_shop/profiles.yml
+++ b/dbt/jaffle_shop/profiles.yml
@@ -3,7 +3,7 @@ airflow_db:
   outputs:
     dev:
       type: postgres
-      host: postgres
+      host: host.docker.internal
       user: postgres
       password: postgres
       port: 5432
