--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
 astronomer-cosmos==1.5.0
-retry==0.9.2
-zerobouncesdk
-joblib
-common_services_sdk_py
-core_bi_common_services==0.9.1.dev1+b8ee
-airflow_python_sdk==1.0.1
-slack==0.0.2
-apache_airflow_client==2.7.0
-slackclient==2.9.4
-core_bi_git==2.2.5
-core_bi_slack==1.0.2
-apache-airflow-providers-slack==8.6.0
-stripe==8.0.0 
+# retry==0.9.2
+# zerobouncesdk
+# joblib
+# common_services_sdk_py
+# core_bi_common_services==0.9.1.dev1+b8ee
+# airflow_python_sdk==1.0.1
+# slack==0.0.2
+# apache_airflow_client==2.7.0
+# slackclient==2.9.4
+# core_bi_git==2.2.5
+# core_bi_slack==1.0.2
+# apache-airflow-providers-slack==8.6.0
+# stripe==8.0.0 
