Switch from PostgreSQL to Snowflake for dbt profile configuration
- Change dbt profile from PostgreSQL to Snowflake in configuration and mapping
- Update dbt_project.yml to use "airflow_db" profile instead of "jaffle_shop"
- Replace all Postgres-specific connection parameters with Snowflake credentials and parameters in profiles
- Update Airflow and dbt pipeline setups to reference Snowflake connection and parameters

--- a/dbt/jaffle_shop/profiles.yml
+++ b/dbt/jaffle_shop/profiles.yml
@@ -2,12 +2,13 @@ airflow_db:
   target: dev
   outputs:
     dev:
-      type: postgres
-      host: frigid-relativity-1982-pgbouncer.frigid-relativity-1982.svc.cluster.local
-      user: frigid_relativity_1982_airflow
-      password: XKwtMF1Sf1k8GwVJlMyEg8xPwgi5soz5
-      port: 6543
-      dbname: frigid-relativity-1982-pgbouncer-metadata
-      schema: airflow
+      type: snowflake
+      account: gp21411
+      user: HEMKUMARCHHEDA
+      password: HKc@8010
+      role: HEMKUMARCHHEDA
+      database: SANDBOX
+      warehouse: HUMANS
+      schema: HEMKUMARCHHEDA
       threads: 4
-      sslmode: disable
+      region: us-east-1
