Update Dockerfile and profiles.yml for Snowflake integration; add Snowflake provider to requirements

--- a/dbt/jaffle_shop/profiles.yml
+++ b/dbt/jaffle_shop/profiles.yml
@@ -3,7 +3,7 @@ airflow_db:
   outputs:
     dev:
       type: snowflake
-      account: gp21411
+      account: gp21411.us-east-1
       user: HEMKUMARCHHEDA
       password: HKc@8010
       role: HEMKUMARCHHEDA
