Add support for large dbt model graph generation and orchestration
- Introduce Airflow DAG using Cosmos to orchestrate hundreds of dbt models with complex dependency management
- Add Python script to auto-generate 200+ dbt models and layer-specific schema/source YAML files with cross-domain references
- Provide shell script for streamlined model generation within project structure
- Update dbt project configuration to set materialization strategies per layer (view/table)
- Add documentation describing model architecture, model generation, domain structure, and setup instructions for required Snowflake connection and project resources

--- a/dbt/jaffle_shop/dbt_project.yml
+++ b/dbt/jaffle_shop/dbt_project.yml
@@ -22,5 +22,11 @@ require-dbt-version: [">=1.0.0", "<2.0.0"]
 models:
   jaffle_shop:
       materialized: table
+      raw:
+        materialized: view
       staging:
         materialized: view
+      intermediate:
+        materialized: view
+      mart:
+        materialized: table
